# weft

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/scripts/: merge-updater-json.mjs
.github/workflows/: ci.yml  release.yml
designs/weft-redesign/: HANDOFF.md  LANDING-PLAN.md  Weft Redesign.html  app.jsx  data.jsx  dialogs.jsx  icons.jsx  m-a-tokens.css  screen-board.jsx  screen-home.jsx  screen-notes.jsx  screen-onboarding.jsx  screen-repos.jsx  screen-scope.jsx  screen-session.jsx  screen-settings.jsx  screen-states.jsx  shell.jsx  styles.css  toasts.jsx
docs/: CHANGE-scope-simplification.md  multica-借鉴笔记.md
docs/superpowers/plans/: 2026-06-05-thread-bus-v1c-coordinator-wake.md  2026-06-12-agent-autonomy-im-provider-routing.md  2026-06-12-onboarding-real-repo-add.md
docs/superpowers/specs/: 2026-06-05-m2-data-model-worktree-orchestration-design.md  2026-06-05-thread-bus-coordination-design.md  2026-06-12-onboarding-real-repo-add-design.md
scripts/: render-dmg-background.sh  weft-macos-fix.command
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tests.manifest
src-tauri/capabilities/: default.json
src-tauri/dmg/: background.tiff
src-tauri/icons/: icon.icns
src-tauri/src/: ask.rs  auth_persist.rs  brief.rs  check.rs  checkpoint.rs  claude.rs  codex.rs  codex_app_server.rs  codex_slash.rs  commands.rs  commands_backup.rs  config.rs  coordinator.rs  curator.rs  detect.rs  gc.rs  git.rs  inspect.rs  lib.rs  main.rs  manifest.rs  materialize.rs  opencode.rs  paths.rs  planner.rs  power.rs  proc_registry.rs  process_quota.rs  profile.rs  pty.rs  session_gate.rs  session_meta.rs  sidecar.rs  slug.rs  tool_command.rs  tools.rs  trail.rs
src-tauri/src/acp/: jsonrpc.rs  map.rs  mod.rs  permission.rs  runtime.rs
src-tauri/src/acp/backends/: mod.rs  omp.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/backup/: config.rs  git_remote.rs  mod.rs  recovery_key.rs  scheduler.rs  snapshot.rs
src-tauri/src/bus/: global.rs  inject.rs  mod.rs  server.rs  state.rs
src-tauri/src/im/: inbound.rs  mod.rs  outbound.rs
src-tauri/src/im/feishu/: mod.rs  registration.rs  streaming.rs  ws.rs
src-tauri/src/lead_chat/: commands.rs  delta_hub.rs  engine.rs  mod.rs  out_hub.rs  proto.rs  revive.rs  rewind.rs  sentinels.rs  test_plan.rs  window.rs
src-tauri/src/skills/: builtin_test_cases.md  inject.rs  mod.rs  parse.rs  sync.rs
src-tauri/src/store/: encryption.rs  key.rs  mod.rs  repo.rs
src-tauri/src/store/entities/: code_checkpoint.rs  direction.rs  lead_message.rs  mod.rs  repo_profile.rs  repo_ref.rs  session.rs  test_plan.rs  thread.rs  worktree.rs
src-tauri/src/store/migration/: mod.rs
src-tauri/tests/: backup_end_to_end.rs  backup_git_remote.rs  backup_recovery.rs  backup_scheduler.rs  backup_snapshot.rs  bus_http.rs  db_encryption.rs  db_encryption_lifecycle.rs  ensure_default_workspace.rs  im_bridge.rs  lead_repo_state.rs  lead_sentinels.rs  m2_git.rs  m2_worktree.rs  worktree_delete.rs
src-tauri/tests/fixtures/acp/: initialize-result.json  omp-spike-transcript.json  prompt-cancel-result.json  prompt-pong-result.json  prompt-tool-result.json  sample-permission-request.json  sample-tool-call.json  sample-tool-completed.json  session-fork-result.json  session-list-result.json  session-new-http-result.json  session-new-result.json  session-resume-result.json
src/board/: CoordinationPanel.tsx  CuratorPanel.tsx  NeedsRows.tsx  NeedsYouView.tsx  RepoDrawer.tsx  RepoGraph.tsx  RepoMapView.tsx  RepoSidePanel.tsx  ResizeEdge.tsx  ScopeConfirmView.tsx  ScopeReview.tsx  ThreadBoard.tsx  WorkspaceBoard.tsx  WorkspaceHome.tsx  WorkspaceKanban.tsx
src/components/: CommandPalette.tsx  ConfirmationCard.tsx  ErrorBoundary.tsx  FileMenu.tsx  FilePathRef.tsx  FileTree.tsx  FirstRunOnboarding.tsx  InheritedAccessChip.tsx  Inspect.tsx  Markdown.tsx  NeedsDock.tsx  ProcessQuotaBar.tsx  Toast.tsx  ToolIcon.tsx  firstRunOnboardingRepos.ts  firstRunOnboardingSubmit.ts
src/components/ai-elements/: Attachment.tsx  Citation.tsx  Context.tsx  Conversation.tsx  PromptInput.tsx  Reasoning.tsx  ShellSnippet.tsx  Shimmer.tsx  StackTrace.tsx  Suggestion.tsx  Tool.tsx  index.ts
src/components/ui/: Dialog.tsx  DropdownMenu.tsx  Input.tsx  Select.tsx  StatusChip.tsx  Tooltip.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: api.ts  fileLinkMarkdown.ts  fileLinks.ts  filePathParsing.ts  gitUrl.ts  grants.ts  markdownCaret.ts  markdownParser.ts  motion.ts  notifications.ts  processQuota.ts  resume.ts  storageKeys.ts  types.ts  updater.ts  useClickOutside.ts  useImeComposition.ts
src/nav/: AppTopBar.tsx  SettingsDialog.tsx  WorkspaceNav.tsx  dialogs.tsx
src/session/: ChatComposer.tsx  ChatTimeline.tsx  DiffDrawer.tsx  DiffPanel.tsx  DiffView.tsx  FileTreePanel.tsx  FileTreeView.tsx  LeadDock.tsx  LeadEmptyState.tsx  LeadTab.tsx  LeadTranscript.tsx  MindMapEditor.tsx  MindMapView.tsx  ObserveView.tsx  PermissionBar.tsx  QueueStack.tsx  RewindDialog.tsx  SessionInfoPanel.tsx  SessionView.tsx  TestPlanPanel.tsx  Transcript.tsx  WorkerConversation.tsx  chatBottom.ts  mindTree.ts  panelWidth.ts  planCard.ts  sessionMeta.ts  transcriptBits.ts  useRepoActions.ts  useResizablePanel.ts
src/session/blocks/: ActionCardBlock.tsx  PlanCardBlock.tsx  PlanSummary.tsx  TestCasesCard.tsx
src/settings/: Backup.tsx
src/state/: chatHistory.ts  deltaCoalescer.ts  leadSnapshot.ts  shortcuts.ts  store.tsx  theme.ts
tests/frontend/: chatBottom.test.ts  chatHistory.test.ts  deltaCoalescer.test.ts  fileLinks.test.ts  firstRunOnboardingRepos.test.ts  firstRunOnboardingSubmit.test.ts  leadSnapshot.test.ts  markdownCaret.test.ts  markdownParser.test.ts  processQuota.test.ts
