[package]
name = "weft-app"
version = "0.1.0"
description = "weft — multi-repo / multi-tool session orchestrator"
authors = ["weft"]
edition = "2021"

[lib]
name = "weft_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tauri-plugin-mcp-bridge = "0.11.2"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
dirs = "5"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
axum = "0.7"
tower = "0.5"
# opencode slash-command discovery hits http://127.0.0.1（无需 TLS）；飞书 CardKit
# 流式卡片走 HTTPS（open.feishu.cn），故启用 rustls-tls（rustls 已由 openlark 引入，
# 此处仅复用，编译成本已付）。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
keepawake = "0.6"
# Package renamed open-lark -> openlark (0.15+); lib import path stays `open_lark::*`.
openlark = { version = "0.17", default-features = false, features = ["communication", "cardkit", "websocket"] }
tauri-plugin-process = "2.3.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
