[package]
name = "weft"
version = "0.1.0"
description = "weft — multi-repo / multi-tool session orchestrator"
authors = ["weft"]
edition = "2021"

[lib]
name = "weft"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
tauri-plugin-mcp-bridge = "0.11.2"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1"
dashmap = "6"
dirs = "5"
futures = "0.3"
# Lock-free concurrent map for the codex consumer's in-flight ask ids (touched by
# the consumer loop AND its spawned per-ask reply tasks) — avoids an async
# Mutex<HashMap> for the serverRequest/resolved → cancel-card mapping.
crossbeam-skiplist = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
axum = "0.7"
tower = "0.5"
# opencode slash-command discovery hits http://127.0.0.1（无需 TLS）；飞书 CardKit
# 流式卡片走 HTTPS（open.feishu.cn），故启用 rustls-tls（rustls 已由 openlark 引入，
# 此处仅复用，编译成本已付）。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
toml_edit = "0.22"
roxmltree = "0.20"
keepawake = "0.6"
# Package renamed open-lark -> openlark (0.15+); lib import path stays `open_lark::*`.
openlark = { version = "0.17", default-features = false, features = ["communication", "cardkit", "websocket"] }
tauri-plugin-process = "2.3.1"
# SQLCipher: replace SQLite with the encrypted variant statically. The feature
# must be declared on the top-level manifest so it propagates via Cargo feature
# unification to sqlx-sqlite's indirect dep on libsqlite3-sys.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
# `keyring` ships with NO platform backend enabled by default — on macOS this
# silently no-ops writes and returns NoEntry on reads, which makes the SQLCipher
# key mint a fresh random key every launch and instantly orphans the previous
# encrypted db. Enable `apple-native` (Security framework) here.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
rand = "0.8"
sha1 = "0.10"
hex = "0.4"
# Pulled in solely to call `CryptoProvider::install_default` at boot. Several
# of our transitive deps enable both `ring` and `aws-lc-rs`, which makes
# rustls refuse to auto-pick and panics at the first TLS handshake. Pin the
# choice once at startup (lib.rs `run()`).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
